--- a/styles/general.css
+++ b/styles/general.css
@@ -61,8 +61,16 @@ img {
   border-radius: var(--radius-md);
 }
 
+@media (min-width: 768px) {
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: var(--space-sm) var(--space-sm);
+    }
+}
+
 .container {
-  max-width: 1100px;
+  max-width: 800px;
   margin: 0 auto;
   padding: var(--space-sm) var(--space-sm);
 }
@@ -84,7 +92,7 @@ hr {
 h1 {
   font-size: var(--font-h1);
   line-height: var(--lh-heading);
-  margin-bottom: var(--space-sm);
+  margin-bottom: 4rem;
   font-weight: 400;
 }
 
@@ -103,7 +111,7 @@ h2 {
 }
 
 section {
-  margin-bottom: var(--space-xl);
+  margin-bottom: var(--space-l);
 }
 
 /* Audience */
