--- a/styles/general.css
+++ b/styles/general.css
@@ -85,7 +85,7 @@ hr {
     transparent
   );
   opacity: 0.9;
-  margin: var(--space-xl) 0;
+  margin: var(--space-lg);
 }
 
 
@@ -107,11 +107,11 @@ h2 {
   font-size: var(--font-lead);
   margin-bottom: var(--space-md);
   color: var(--text-main-h2);
-  max-width: 36ch;
-}
+
+  }
 
 section {
-  padding: var(--space-xl) 0;
+  padding: var(--space-md) 0;
   margin: 0;
 }
 
@@ -193,8 +193,13 @@ summary {
     font-size: 1rem;
     line-height: 1.5;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: 600;
 }
+
+.contact-button {
+    text-align: center;
+    margin-top: var(--space-xl);
+  }
 
 /* Responsive */
 @media (min-width: 768px) {
@@ -224,4 +229,10 @@ summary {
     margin-bottom: var(--space-md);
     color: var(--text-main-h2);
   }
-}
+
+  section {
+    padding: var(--space-xl) 0;
+    margin: 0;
+  }
+
+ }
