--- a/styles/hero.css
+++ b/styles/hero.css
@@ -26,7 +26,8 @@
     gap: var(--space-lg);
     margin-bottom: 20px;
 }
-.hero-button-mobile {
+.hero-button-mobile,
+ contact-button{
     display: flex;
     justify-content: center;
 }
