--- a/styles/hero.css
+++ b/styles/hero.css
@@ -78,10 +78,11 @@
   inset: 0;
   background: linear-gradient(
     to bottom,
-    rgba(243, 230, 225, 0.4),
+    rgba(243, 230, 225, 0.1),
     rgba(243, 245, 225, 0.01)
   );
   z-index: 1;
+  pointer-events: none;
 }
 
 .hero::after {
